[gd_scene load_steps=21 format=3 uid="uid://byw7sibergtuc"]

[ext_resource type="Script" path="res://scene/judge_scene/script/judge_sence.gd" id="1_gltdn"]
[ext_resource type="Texture2D" uid="uid://bsh0604avgdle" path="res://scene/judge_scene/sprites/dungeon background 11.png" id="2_bru36"]
[ext_resource type="PackedScene" uid="uid://dh71g61cm8k44" path="res://scene/menu/scene/pause_menu.tscn" id="5_vev0h"]
[ext_resource type="FontFile" uid="uid://cxe2ygnd717oj" path="res://fonts/px.ttf" id="6_7kowl"]
[ext_resource type="Texture2D" uid="uid://66e038fnmrpt" path="res://scene/judge_scene/sprites/UI books & more.png" id="6_aghy4"]
[ext_resource type="PackedScene" uid="uid://dwgw3k2tmmxfs" path="res://scene/judge_scene/scene/ghost_book.tscn" id="6_qugnk"]
[ext_resource type="Script" path="res://scene/judge_scene/script/PauseCanvasLayer.gd" id="6_vbum2"]
[ext_resource type="Texture2D" uid="uid://cfnvwqmeb8hjo" path="res://scene/judge_scene/sprites/Time & weather.png" id="10_7mc66"]
[ext_resource type="Script" path="res://scene/judge_scene/script/ask_tree.gd" id="10_mdqm3"]
[ext_resource type="PackedScene" uid="uid://di0yrbq0taqb1" path="res://utils/date/date_system.tscn" id="11_wgvcv"]
[ext_resource type="PackedScene" uid="uid://c7k2if286c54n" path="res://scene/judge_scene/scene/judge_options.tscn" id="15_345g8"]
[ext_resource type="PackedScene" uid="uid://b5h5c651ku2ub" path="res://utils/clickEffect/click.tscn" id="18_bav3m"]

[sub_resource type="Animation" id="Animation_kgoaa"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/GhostBookButton:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(936, 516)]
}

[sub_resource type="Animation" id="Animation_in7ld"]
resource_name = "files_get"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/GhostBookButton:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/GhostBookButton:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(2, 2), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/GhostBookButton:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(936, 516), Vector2(936, 950)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_galhf"]
_data = {
"RESET": SubResource("Animation_kgoaa"),
"ghost_book_get": SubResource("Animation_in7ld")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_4v52v"]
atlas = ExtResource("10_7mc66")
region = Rect2(16, 176, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_l1qv1"]
atlas = ExtResource("6_aghy4")
region = Rect2(160, 128, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_d7i1h"]
atlas = ExtResource("6_aghy4")
region = Rect2(16, 128, 96, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_q308k"]
atlas = ExtResource("6_aghy4")
region = Rect2(352, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_d06n2"]
atlas = ExtResource("6_aghy4")
region = Rect2(400, 16, 48, 80)

[node name="JudgeSence" type="Node2D"]
script = ExtResource("1_gltdn")

[node name="Background" type="Sprite2D" parent="."]
visible = false
position = Vector2(957, 537.5)
scale = Vector2(1.27474, 1.08301)
texture = ExtResource("2_bru36")

[node name="GhostPositon" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(977, 743)

[node name="NiuTouPositon" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(1157, 741)

[node name="MaMianPositon" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(767, 739)

[node name="BlackPositon" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(580, 775)

[node name="WhitePositon" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(1397, 775)

[node name="SelfPosition" type="Marker2D" parent="."]
unique_name_in_owner = true

[node name="ClickEffect" parent="." instance=ExtResource("18_bav3m")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_galhf")
}
autoplay = "death_god2_idle"

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 0

[node name="EndThisYear" type="Button" parent="CanvasLayer"]
offset_right = 112.0
offset_bottom = 48.0
size_flags_horizontal = 3
text = "结束这一年"

[node name="GhostBook" parent="CanvasLayer" instance=ExtResource("6_qugnk")]
unique_name_in_owner = true
visible = false
offset_left = 579.0
offset_top = 74.0
offset_right = -741.0
offset_bottom = -506.0

[node name="JudgeOptions" parent="CanvasLayer" instance=ExtResource("15_345g8")]
unique_name_in_owner = true
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="TimeUI" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -132.0
offset_bottom = 48.0
grow_horizontal = 0

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/TimeUI"]
layout_mode = 2
texture = SubResource("AtlasTexture_4v52v")

[node name="TimeLabel" type="Label" parent="CanvasLayer/TimeUI"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("6_7kowl")
text = "19:20:20"

[node name="DateSystem" parent="CanvasLayer/TimeUI" node_paths=PackedStringArray("show") instance=ExtResource("11_wgvcv")]
speed = 0.5
show = NodePath("../TimeLabel")

[node name="Money" type="Label" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -56.0
offset_bottom = 19.0
grow_horizontal = 0
text = "$1000
"

[node name="FilesPosition" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -266.0
offset_top = -139.0
offset_right = -226.0
offset_bottom = -99.0
grow_horizontal = 2
grow_vertical = 0

[node name="GhostBookPosition" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 4.0
offset_top = -142.0
offset_right = 44.0
offset_bottom = -102.0
grow_horizontal = 2
grow_vertical = 0

[node name="EventPosition" type="Control" parent="CanvasLayer"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 0
grow_vertical = 2

[node name="GhostBookButton" type="TextureButton" parent="CanvasLayer"]
unique_name_in_owner = true
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 360.0
offset_top = -132.0
offset_right = 408.0
offset_bottom = -84.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 3
toggle_mode = true
keep_pressed_outside = true
texture_normal = SubResource("AtlasTexture_l1qv1")
texture_pressed = SubResource("AtlasTexture_d7i1h")
stretch_mode = 3

[node name="FilesButton" type="TextureButton" parent="CanvasLayer"]
unique_name_in_owner = true
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -104.0
offset_top = -186.0
offset_right = -56.0
offset_bottom = -126.0
grow_horizontal = 2
grow_vertical = 0
toggle_mode = true
keep_pressed_outside = true
texture_normal = SubResource("AtlasTexture_q308k")
texture_pressed = SubResource("AtlasTexture_d06n2")
stretch_mode = 3

[node name="Table" type="BoxContainer" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -257.5
offset_top = -80.0
offset_right = 257.5
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0

[node name="AskButton" type="Button" parent="CanvasLayer/Table"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "询问"

[node name="NextButton" type="Button" parent="CanvasLayer/Table"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "下一个"

[node name="JudgeButton" type="Button" parent="CanvasLayer/Table"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "判决"

[node name="AskTree" type="Tree" parent="CanvasLayer"]
unique_name_in_owner = true
visible = false
offset_left = 447.0
offset_top = 225.0
offset_right = 747.0
offset_bottom = 425.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("10_mdqm3")

[node name="PauseCanvasLayer" type="CanvasLayer" parent="."]
process_mode = 3
script = ExtResource("6_vbum2")

[node name="PauseMenu" parent="PauseCanvasLayer" instance=ExtResource("5_vev0h")]
unique_name_in_owner = true
visible = false

[connection signal="pressed" from="CanvasLayer/EndThisYear" to="." method="_on_end_this_year_pressed"]
[connection signal="pressed" from="CanvasLayer/GhostBookButton" to="." method="_on_ghost_book_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Table/AskButton" to="." method="_on_ask_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Table/NextButton" to="." method="_on_next_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Table/JudgeButton" to="." method="_on_judge_button_pressed"]
[connection signal="item_selected" from="CanvasLayer/AskTree" to="." method="_on_ask_tree_item_selected"]
